# sammet-docker

./: Dockerfile  Makefile  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
src/: database.py
src/sammet_app.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
tests/: conftest.py
